# myNetLib

./: .gitignore
example/: clientTcp.cpp  clientUdpSyn.cpp  serverTcpAsyn.cpp  serverTcpSyn.cpp  serverTcpUdpAsyn.cpp  serverUdpAsyn.cpp  serverUdpSyn.cpp  study.txt  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp  timer5.cpp
example/asio/: clientTcp.cpp  clientUdpSyn.cpp  serverTcpAsyn.cpp  serverTcpSyn.cpp  serverTcpUdpAsyn.cpp  serverUdpAsyn.cpp  serverUdpSyn.cpp  study.txt  timer1.cpp  timer2.cpp  timer3.cpp  timer4.cpp  timer5.cpp
example/asio/cpp11/buffers/: reference_counted.cpp
example/asio/cpp11/chat/: chat_message.hpp  chat_server.cpp
example/asio/cpp11/echo/: async_tcp_echo_server.cpp  blocking_tcp_echo_client.cpp
example/cpp11/buffers/: reference_counted.cpp
example/cpp11/chat/: chat_client.cpp  chat_message.hpp  chat_server.cpp
example/cpp11/echo/: async_tcp_echo_server.cpp  blocking_tcp_echo_client.cpp
example/log/: tutorial_file.cpp
material/: ~$$框图.~vsdx  框图.vsdx
project/my_net_lib/: my_net_lib.sln  my_net_lib.vcxproj  my_net_lib.vcxproj.filters
server/: main.cpp
src/: bkill.sh  build.sh  config.info  ff.sh  laqi.sh  rebuild.sh
src/balance/: CMakeLists.txt  balance.cpp  balance_client.cpp  balance_client.h  balance_route.cpp  balance_route.h  balance_server.cpp  balance_server.h  laqi.sh
src/base/: CMakeLists.txt  base_client.cpp  base_client.h  base_server.cpp  base_server.h  common_client.cpp  common_client.h  middleware_server.h  module.cpp  module.h  range_manage.cpp  range_manage.h  route.cpp  route.h  signal_process.h  unique_code.cpp  unique_code.h
src/central/: CMakeLists.txt  base_server.cpp  base_server.h  base_session.cpp  base_session.h  central.cpp  central_client.cpp  central_client.h  central_server.cpp  central_server.h  laqi.sh  range_manage.cpp  range_manage.h  vid_manage.cpp  vid_manage.h
src/central/conf/: net.xml
src/client/: CMakeLists.txt  base_client.cpp  base_client.h  main.cpp  user_client.cpp  user_client.h
src/client/conf/: net.xml
src/common/: CMakeLists.txt  common.cpp  common.h  config_settings.cpp  config_settings.h  hash_function.h  log.cpp  log.h  main_start.h  msg.cpp  msg.h
src/gateway/: CMakeLists.txt  gateway.cpp  gateway_client.cpp  gateway_client.h  gateway_server.cpp  gateway_server.h  laqi.sh
src/gateway/conf/: net.xml
src/login/: CMakeLists.txt  laqi.sh  login.cpp  login_server.cpp  login_server.h
src/login/conf/: net.xml
src/media/: CMakeLists.txt  laqi.sh  media.cpp  media_client.cpp  media_client.h  media_server.cpp  media_server.h
src/media/conf/: net.xml
src/monitor/: CMakeLists.txt  cmd_thread.cpp  cmd_thread.h  laqi.sh  monitor.cpp  monitor_client.cpp  monitor_client.h  monitor_server.cpp  monitor_server.h
src/monitor/conf/: net.xml
src/net_base/: base_client.cpp  base_client.h  base_server.cpp  base_server.h  base_session.h
src/proto/: CMakeLists.txt  external.pb.cc  external.pb.h  external.proto  internal.pb.cc  internal.pb.h  internal.proto  login.pb.cc  login.pb.h  login.proto  monitor.pb.cc  monitor.pb.h  monitor.proto  prebuild.sh  proc.pb.cc  proc.pb.h  proc.proto
src/run/: bkill.sh  copy.sh  ff.sh  laqi.sh  rm_logs.sh
src/run/balance/conf/: net.xml
src/run/balance1/conf/: net.xml
src/run/balance2/conf/: net.xml
src/run/balance3/conf/: net.xml
src/run/central/conf/: net.xml
src/run/client/: laqi.sh
src/run/client/conf/: net.xml
src/run/client1/: laqi.sh
src/run/client1/conf/: net.xml
src/run/client2/: laqi.sh
src/run/client2/conf/: net.xml
src/run/client3/: laqi.sh
src/run/client3/conf/: net.xml
src/run/gateway1/conf/: net.xml
src/run/gateway2/conf/: net.xml
src/run/gateway3/conf/: net.xml
src/run/media/conf/: net.xml
src/run/media1/conf/: net.xml
src/run/media2/conf/: net.xml
src/run/media3/conf/: net.xml
src/server/: CMakeLists.txt  base_server.cpp  base_server.h  base_session.cpp  base_session.h  main.cpp
test/allocator_test/: main.cpp
test/boost_any_test/test1/: main.cpp
test/boost_asio_coroutines_ts_test/: echo_server.cpp
test/boost_asio_steady_time_test/: main.cpp
test/boost_beast_test/http_server_coro/: CMakeLists.txt
test/boost_beast_test/http_server_sync/: CMakeLists.txt  http_server_sync.cpp
test/boost_bimap_test/: main.cpp
test/boost_log_test/: SLog.cpp
test/boost_log_test/SLog_test/: log_test.cpp
test/boost_random_test/: CMakeLists.txt  main.cpp
test/boost_test_test/test1/: main.cpp
test/boost_test_test/test2/: main.cpp
test/boost_test_test/test3/: main.cpp
test/boost_test_test/test4/: CMakeLists.txt  main.cpp
test/mpi_test/: CMakeLists.txt  main.cpp
test/protobuf_test/: main.cpp  test.bat  test.pb.cc  test.pb.h  test.proto
test/temp/: test.cpp  test_lamda.cpp
test/temp/tlv/: Aristotle.h  MsgProto.h  MsgTLV.h  MsgValue.h  client.h  login.h  monitor.h  proc.h  register.h  table.h  test_lamda.cpp  voice.h
test/unicode_test/: main.cpp  unique_code.cpp
test/vid_manage_test/: CMakeLists.txt  main.cpp  vid_manage.cpp  vid_manage.h
